# VirgilBookStore

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
Store/: settings.py  urls.py
Store/tests/: tests_models.py
api/: .env.example  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
api/book/: helpers.py  models.py  tests.py  views.py
api/book/migrations/: 0001_initial.py
api/home/: forms.py
api/market/: serializers.py  urls.py
api/static/js/: main.js
api/static/js/services/: books.js  user.js
api/templates/: index.html
api/templates/base/: content.html  footer.html  navbar_home.html  rating.html
api/templates/books/: book_detail.html  book_genre.html
api/templates/components/: form_coupon.html  table_books.html  table_coupons.html
api/templates/market/: coupons_update.html
api/templates/pages/: coupons.html  wishlist.html
api/templates/user/: accounts_table.html
api/user/: forms.py  models.py  urls.py  views.py
api/user/management/commands/: __init__.py  create_books.py
api/user/migrations/: 0001_initial.py
api/virgilbookstore/: settings.py  urls.py
book/: admin.py  choices.py  forms.py  helper.py  models.py  serializers.py  tests.py  urls.py  views.py
book/migrations/: 0001_initial.py  0002_alter_book_slug.py  0002_auto_20201205_1134.py  0002_initial.py  0002_remove_book_detail.py  0003_alter_book_id_alter_comment_id_alter_genre_id_and_more.py  0003_genre_description.py  0003_genre_origin.py  0003_images.py  0004_alter_book_genre_alter_book_image_alter_book_slug_and_more.py  0004_alter_book_image.py  0004_auto_20201205_1223.py  0004_remove_book_is_publish_remove_book_keywords.py  0005_alter_genre_slug.py  0005_auto_20201205_1936.py  0005_remove_book_publication_date.py  0006_alter_images_image.py  0006_auto_20201205_2004.py  0006_book_is_publish.py  (+4 more)
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
home/: admin.py  context_home.py  context_processors.py  forms.py  models.py  serializers.py  urls.py  views.py
market/: models.py  urls.py  views.py
order/: admin.py  choices.py  context_processors.py  forms.py  models.py  urls.py  views.py
templates/: base.html  book.html  books.html  cart.html  checkout.html  extends.html  index.html  login.html  order-success.html  orders.html  profile.html
user/: admin.py  form_backup.py  forms.py  models.py  urls.py  views.py
virgilbookstore/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
writer/: admin.py  models.py
(+166 files in other folders)
